@@ -1,7 +1,10 @@
 package com.improvement_app.food.application;
 
-import com.improvement_app.food.application.ports.MealHandler;
+import com.improvement_app.food.application.ports.in.MealManagementUseCase;
+import com.improvement_app.food.application.ports.out.MealPersistencePort;
 import com.improvement_app.food.domain.MealRecipe;
+import com.improvement_app.food.domain.MealSearchCriteria;
+import com.improvement_app.food.domain.MealSortCriteria;
 import com.improvement_app.food.domain.enums.MealCategory;
 import com.improvement_app.food.domain.enums.MealPopularity;
 import com.improvement_app.food.domain.enums.MealType;
@@ -9,62 +12,53 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class MealService {
-    private final MealHandler mealHandler;
+public class MealService implements MealManagementUseCase {
 
-    public List<MealRecipe> getMeals(MealCategory mealCategory,
-                                     MealType mealType,
-                                     MealPopularity mealPopularity,
-                                     String mealName,
-                                     String sortBy,
-                                     boolean onOnePortion) {
+    private final MealPersistencePort mealPersistencePort;
 
-        List<MealRecipe> mealRecipes = mealHandler.findAllByName(mealName, sortBy);
+    @Override
+    public List<MealRecipe> searchMeals(MealCategory category,
+                                        MealType type,
+                                        MealPopularity popularity,
+                                        String name,
+                                        String sortBy,
+                                        boolean adjustToSinglePortion) {
 
-        if (mealCategory != MealCategory.ALL) {
-            mealRecipes = mealRecipes
-                    .stream()
-                    .filter(meal -> meal.getCategory() == mealCategory)
-                    .collect(Collectors.toList());
+        log.info("Searching meals with criteria: category={}, type={}, popularity={}, name={}",
+                category, type, popularity, name);
+
+        MealSearchCriteria searchCriteria = MealSearchCriteria.of(category, type, popularity, name);
+        MealSortCriteria sortCriteria = MealSortCriteria.of(sortBy);
+
+        List<MealRecipe> meals = mealPersistencePort.findMeals(searchCriteria, sortCriteria);
+
+        if (adjustToSinglePortion) {
+            meals = meals.stream()
+                    .map(MealRecipe::adjustToSinglePortion)
+                    .toList();
         }
 
-        if (mealType != MealType.ALL) {
-            mealRecipes = mealRecipes
-                    .stream()
-                    .filter(meal -> meal.getType() == mealType)
-                    .collect(Collectors.toList());
-        }
-
-        if (mealPopularity != MealPopularity.ALL) {
-            mealRecipes = mealRecipes
-                    .stream()
-                    .filter(meal -> meal.getPopularity() == mealPopularity)
-                    .collect(Collectors.toList());
-        }
-
-        if (onOnePortion) {
-            mealRecipes = mealRecipes.stream()
-                    .map(meal -> {
-                        meal.getIngredients()
-                                .forEach(mealIngredient ->
-                                        mealIngredient.setAmount(mealIngredient.getAmount() / meal.getPortionAmount()));
-
-                        return meal;
-                    })
-                    .collect(Collectors.toList());
-        }
-
-        return mealRecipes;
+        log.info("Found {} meals matching criteria", meals.size());
+        return meals;
     }
 
-    public void deleteAll() {
-        mealHandler.deleteAll();
+    @Override
+    public List<String> getAvailableCategories() {
+        return Arrays.stream(MealCategory.values())
+                .map(MealCategory::getName)
+                .toList();
     }
 
+    @Override
+    public List<String> getAvailableTypes() {
+        return Arrays.stream(MealType.values())
+                .map(MealType::getName)
+                .toList();
+    }
 }
